[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/entity/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/karakter/Dusman.png" type="Texture" id=2]
[ext_resource path="res://sprites/environment/Light_cone.png" type="Texture" id=3]
[ext_resource path="res://sprites/karakter/alerted.png" type="Texture" id=4]
[ext_resource path="res://audio/sfx/gunshot.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 4

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.679545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 12, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 32.0
angular_velocity = 71.29
angular_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 7 )
color = Color( 0.454902, 0.247059, 0.223529, 1 )
hue_variation = 0.2
hue_variation_random = 0.5

[node name="Enemy" type="Area2D"]
position = Vector2( 48, -48 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 2 )
offset = Vector2( 0, -24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2( 12, 0 )
polygon = PoolVector2Array( 0, 0, 96, -84, 156, -36, 156, 36, 96, 84 )

[node name="Light" type="Light2D" parent="AttackArea"]
material = SubResource( 9 )
position = Vector2( 24, 0 )
scale = Vector2( 1.5, 1.5 )
z_index = 100
texture = ExtResource( 3 )

[node name="TozToprak" type="Particles2D" parent="."]
position = Vector2( 0, 24 )
amount = 32
lifetime = 0.75
local_coords = false
process_material = SubResource( 8 )

[node name="Alert" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -36 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "Ingame"

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
